Fixed desktop nav links alignment for  Careers and About

--- a/Landing Page 04/style.scss
+++ b/Landing Page 04/style.scss
@@ -321,6 +321,12 @@ main {
             list-style: none;
             position: relative;
 
+            &:nth-of-type(3),    
+            &:nth-of-type(4){
+              position: relative;
+              top:0.1rem;
+            }
+
             button {
               @include buttons();
               @include buttonArrowUpTransition();
@@ -409,7 +415,6 @@ main {
     .hero {
       display: grid;
       grid-template: 1fr/ 50px 500px 1fr;
-      // margin-top:5rem;
 
       .hero-img {
         grid-area: 1 / 3 / span 2 / span 1;
